@@ -2,6 +2,9 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  29 Dec 2003; Masatomo Nakano <nakano@gentoo.org> emerge, portage.py:
+  Added an ambiguity package check when emerge. This closes bug #22700.
+
 *portage-2.0.50_pre9 (24 Dec 2003): API change + enhancements
 
   24 Dec 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Added
